--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,25 @@
-numpy
-opencv-python
-loguru
-scikit-image
-scikit-learn
-tqdm
-torchvision>=0.10.0
-Pillow
-thop
-ninja
-tabulate
-tensorboard
-lap
-motmetrics
-filterpy
-h5py
-matplotlib
-scipy
-prettytable
-easydict
-tensorboard
-pyyaml
-yacs
-termcolor
-gdown
-onnx==1.8.1
-onnxruntime==1.8.0
-onnx-simplifier==0.3.5
-
-
+opencv-python>=4.5.5
+loguru>=0.5.3
+scikit-image>=0.18
+scikit-learn>=1.0
+tqdm>=4.62
+Pillow>=8.3
+thop>=0.0.31
+ninja>=1.10
+tabulate>=0.9.0
+tensorboard>=2.8
+h5py>=3.6
+matplotlib>=3.4
+scipy>=1.7
+prettytable>=3.3
+easydict>=1.9
+pyyaml>=6.0
+yacs>=0.1.8
+termcolor>=1.1.0
+gdown>=4.6.0
+lap>=0.4.0
+motmetrics>=1.2.0
+filterpy>=1.4.5
+onnx>=1.9.0,<1.13
+onnx-simplifier>=0.3.6
+onnxruntime>=1.8.1  # CPU runtime
